--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = ds_tools-Sergii-Kavun
+name = dscience_tools
 version = 0.9.1
 author = Sergii Kavun
 author_email = kavserg@gmail.com
