--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,10 +32,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e .[test]
-          pip install numpy pandas polars matplotlib seaborn scipy scikit-learn statsmodels pydantic pytest
-          pip install pytest
           pip install -r requirements.txt
+          pip install pytest
+          pip install .
 
       - name: Run tests with pytest
         run: |
