--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,13 +32,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip cache purge
           pip install -r requirements.txt
           pip install pytest
-          pip install .
 
       - name: Run tests with pytest
         run: |
-          pytest
+          pytest src/ 
 
   # --- THE TASK OF COLLECTION AND PUBLICATION ---
   build-and-publish:
