--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -36,7 +36,7 @@ jobs:
           python -m pip install --upgrade pip
           pip cache purge
           pip install -r requirements.txt
-          pip install pytest
+          pip install -r tests/requirements.txt
 
       - name: Run tests with pytest
         run: |
