--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -37,6 +37,7 @@ jobs:
           pip cache purge
           pip install -r requirements.txt
           pip install -r tests/requirements.txt
+          pip install pytest
 
       - name: Run tests with pytest
         run: |
