--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -36,12 +36,11 @@ jobs:
           python -m pip install --upgrade pip
           pip cache purge
           pip install -r requirements.txt
-          pip install -r tests/requirements.txt
-          pip install pytest
+          if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
 
       - name: Run tests with pytest
         run: |
-          pytest src/ds_tool/ 
+          pytest
 
   # --- THE TASK OF COLLECTION AND PUBLICATION ---
   build-and-publish:
