--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -36,6 +36,7 @@ jobs:
           python -m pip install --upgrade pip
           pip cache purge
           pip install -r requirements.txt
+          pip install pytest pytest-cov
           if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
 
       - name: Run tests with pytest
