--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-    numpy
-    pandas
-    polars
-    matplotlib
-    seaborn
-    scipy
-    scikit-learn
-    statsmodels
-    pydantic>=2.0
+numpy
+pandas
+polars
+matplotlib
+seaborn
+scipy
+scikit-learn
+statsmodels
+pydantic>=2.0
+optuna
