--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "dscience_tools"
-version = "0.9.2"
+version = "1.0.0"
 description = "DSTools: Data Science Tools Library"
 readme = "README.md"
 authors = [
@@ -22,7 +22,7 @@ classifiers = [
     "Programming Language :: Python :: 3.6",
 ]
 
-dynamic = ["version"]
+dynamic = ["readme"]
 
 [project.urls]
 Homepage = "https://github.com/s-kav/ds_tools"
