--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
     "Programming Language :: Python :: 3.6",
 ]
 
-dynamic = ["readme"]
+dynamic = []
 
 [project.urls]
 Homepage = "https://github.com/s-kav/ds_tools"
