--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,20 @@ license = {text = "MIT License"}
 dependencies = ["pandas<=2.2.3,>=0.25.0", "numpy<=2.2.0,>=1.22.0"]
 requires-python = ">=3.6.0"
 classifiers = [
-    "Intended Audience :: Scientists & Developers",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Researchers",
+    "Intended Audience :: Information Technology",
+    "Intended Audience :: Science/Research",
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.6",
+    "License :: OSI Approved :: MIT License",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Scientific/Engineering :: Information Analysis",
+    "Topic :: Scientific/Engineering :: Mathematics",
 ]
 
 dynamic = []
