--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -38,10 +38,16 @@ jobs:
           pip install -r requirements.txt
           pip install pytest pytest-cov
           if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
+          pip install -e .
 
-      - name: Run tests with pytest
+      - name: Run tests and collect coverage 
         run: |
-          pytest
+          pytest --cov=src --cov-report=xml
+          
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }} 
 
   # --- THE TASK OF COLLECTION AND PUBLICATION ---
   build-and-publish:
