--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,11 +6,13 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Publish Python Package to PyPI
+name: Test, Lint, and Publish Python Package to PyPI
 
 on:
+  push:
+    branches: [ main ] # Run tests and linting on every push to main
   release:
-    types: [published]
+    types: [published] # Publish only when a release is created
 
 jobs:
   # --- TESTING TASK ---
@@ -49,10 +51,29 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }} 
 
+  # --- LINTING TASK ---
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11' # One version is enough for linting
+      - name: Install linters
+        run: pip install ruff black
+      - name: Check formatting with Black
+        run: black --check .
+      - name: Lint with Ruff
+        run: ruff check .
+
+
   # --- THE TASK OF COLLECTION AND PUBLICATION ---
   build-and-publish:
     runs-on: ubuntu-latest
-    needs: test
+    # The publication will be triggered ONLY when the release is created
+    # AND if the tests and linting are successful
+    if: github.event_name == 'release' && github.event.action == 'published'
+    needs: [test, lint]
     permissions:
       id-token: write
 
