--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dynamic = []
 Homepage = "https://github.com/s-kav/ds_tools"
 Documentation = "https://github.com/s-kav/ds_tools"
 Repository = "https://github.com/s-kav/ds_tools.git"
-Source Code = "https://github.com/s-kav/ds_tools"
+"Source Code" = "https://github.com/s-kav/ds_tools"
 
 [tool.black]
 line-length = 88
