--- a/.ruff.toml
+++ b/.ruff.toml
@@ -2,5 +2,7 @@
 
 line-length = 88
 target-version = "py311"
-lint.extend-select = ["E", "F", "I"]
-lint.ignore = ["E501"] 
+
+[lint]
+extend-select = ["E", "F", "I"]
+ignore = ["E501"]
