--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,3 +53,4 @@ plugins:
 nav:
   - 'Home': 'index.md'
   - 'API Reference': 'api/index.md'
+  - 'Source Code': 'https://github.com/s-kav/ds_tools/tree/main/src'
