--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -36,11 +36,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip cache purge
           pip install -r requirements.txt
-          pip install pytest pytest-cov
-          if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
-          pip install -e .
+          pip install .[test]
 
       - name: Run tests and collect coverage 
         run: |
