feat: release v2.0.0 - modular architecture + dual licensing

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,20 +1,20 @@
 [metadata]
 name = dscience_tools
-version = 1.0.6
+version = 2.0.0
 author = Sergii Kavun
 author_email = kavserg@gmail.com
 description = A library of helpful functions for various data science research stages.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/s-kav/ds_tools
-license = MIT
+license = PolyForm-Noncommercial-1.0.0 OR Commercial
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: PolyForm-Noncommercial-1.0.0 OR Commercial
     Operating System :: OS Independent
     Intended Audience :: Developers
     Intended Audience :: Science/Research
