add required libs

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,11 @@ install_requires =
     matplotlib
     seaborn
     scipy
+    psutil
+    os
+    cupy
+    numba
+    warnings
     scikit-learn
     statsmodels
     pydantic>=2.0
