add new section with "hard" dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,13 +34,20 @@ install_requires =
     seaborn
     scipy
     psutil
-    os
-    cupy
-    numba
-    warnings
     scikit-learn
     statsmodels
     pydantic>=2.0
 
+[options.extras_require]
+# user can use: pip install dscience_tools[performance]
+performance =
+    cupy-cuda13x
+    numba
+
+test =
+    pytest
+    pytest-cov
+    pytest-mock
+    
 [options.packages.find]
 where = src
