--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,6 +23,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
+        exclude_numba: [false, true] 
 
     steps:
       - name: Checkout repository
@@ -38,6 +39,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install .[test,performance]
+      
+      - name: Uninstall Numba if required by matrix
+        if: matrix.exclude_numba
+        run: pip uninstall -y numba
 
       - name: Run tests and collect coverage 
         run: |
