--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = dscience_tools
-version = 2.0.0
+version = 2.0.1
 author = Sergii Kavun
 author_email = kavserg@gmail.com
 description = A library of helpful functions for various data science research stages.
@@ -23,8 +23,8 @@ classifiers =
 
 [options]
 package_dir =
-    = src
-packages = find:
+   ds_tools = src
+packages = ds_tools
 python_requires = >=3.8
 install_requires =
     numpy
