--- a/setup.cfg
+++ b/setup.cfg
@@ -39,11 +39,13 @@ install_requires =
     pydantic>=2.0
 
 [options.extras_require]
-# user can use: pip install dscience_tools[performance]
-performance =
-    cupy-cuda13x
+performance-numba =
     numba
-
+performance-cupy =
+    cupy-cuda13x
+performance =
+    %(performance-numba)s
+    %(performance-cupy)s
 test =
     pytest
     pytest-cov
