--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -56,6 +56,8 @@ jobs:
           
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
+        with:
+          flags: py${{ matrix.python-version }}-${{ matrix.optional-deps }}
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }} 
 
