--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -57,6 +57,7 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         with:
+          files: ./coverage.xml
           flags: py${{ matrix.python-version }}-${{ matrix.optional-deps }}
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }} 
