--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -57,7 +57,10 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         with:
+          disable_gcov: true
           files: ./coverage.xml
+          fail_ci_if_error: true
+          verbose: true
           flags: py${{ matrix.python-version }}-${{ matrix.optional-deps }}
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }} 
