--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -53,7 +53,12 @@ jobs:
       - name: Run tests and collect coverage 
         run: |
           pytest --cov=src --cov-report=xml:coverage.xml
-          
+      
+      - name: Debug coverage.xml
+        run: |
+          ls -l coverage.xml
+          head -n 40 coverage.xml
+      
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         with:
