--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -52,19 +52,13 @@ jobs:
       
       - name: Run tests and collect coverage 
         run: |
-          pytest --cov --cov-report=xml:coverage.xml
-      
-      - name: Debug coverage.xml
-        run: |
-          ls -l coverage.xml
-          head -n 40 coverage.xml
-      
+          cd src
+          pytest --cov=. --cov-report=xml:../coverage.xml ../tests
+     
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         with:
           files: ./coverage.xml
-          fail_ci_if_error: true
-          verbose: true
           flags: py${{ matrix.python-version }}-${{ matrix.optional-deps }}
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }} 
