--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,16 +26,15 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         optional-deps: [none, numba, cupy, all]
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
+        
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-
+          
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -52,16 +51,168 @@ jobs:
       
       - name: Run tests and collect coverage 
         run: |
-          cd src
-          pytest --cov=. --cov-report=xml:../coverage.xml ../tests
-     
-      - name: Upload coverage reports to Codecov
+          pytest --cov=src --cov-report=xml:coverage-${{ matrix.python-version }}-${{ matrix.optional-deps }}.xml tests/
+          
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-${{ matrix.python-version }}-${{ matrix.optional-deps }}
+          path: coverage-${{ matrix.python-version }}-${{ matrix.optional-deps }}.xml
+          retention-days: 1
+
+  upload-coverage:
+    needs: test
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+          
+      - name: Install coverage tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install coverage[toml]
+          
+      - name: Download all coverage artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: coverage-*
+          path: coverage-reports/
+          merge-multiple: true
+          
+      - name: List downloaded files
+        run: |
+          echo "Downloaded coverage files:"
+          ls -la coverage-reports/
+          
+      - name: Combine coverage reports
+        run: |
+          echo "Combining coverage reports..."
+          cd coverage-reports
+          
+          python -c "
+import xml.etree.ElementTree as ET
+import os
+import glob
+
+xml_files = glob.glob('*.xml')
+print(f'Found {len(xml_files)} XML files: {xml_files}')
+
+if not xml_files:
+    print('No XML files found!')
+    exit(1)
+
+base_tree = ET.parse(xml_files[0])
+base_root = base_tree.getroot()
+
+file_coverage = {}
+
+for xml_file in xml_files:
+    print(f'Processing {xml_file}')
+    tree = ET.parse(xml_file)
+    root = tree.getroot()
+    
+    for package in root.findall('.//package'):
+        for class_elem in package.findall('classes/class'):
+            filename = class_elem.get('filename')
+            if filename not in file_coverage:
+                file_coverage[filename] = {
+                    'lines_covered': 0,
+                    'lines_valid': 0,
+                    'line_hits': {},
+                    'branch_hits': {},
+                    'class_elem': class_elem
+                }
+            
+            for line in class_elem.findall('lines/line'):
+                line_num = int(line.get('number'))
+                hits = int(line.get('hits', 0))
+                file_coverage[filename]['line_hits'][line_num] = max(
+                    file_coverage[filename]['line_hits'].get(line_num, 0), hits
+                )
+
+combined_root = ET.Element('coverage')
+combined_root.set('version', base_root.get('version', ''))
+combined_root.set('timestamp', base_root.get('timestamp', ''))
+
+sources = ET.SubElement(combined_root, 'sources')
+source = ET.SubElement(sources, 'source')
+source.text = '.'
+
+packages = ET.SubElement(combined_root, 'packages')
+package = ET.SubElement(packages, 'package')
+package.set('name', '.')
+package.set('line-rate', '1.0')
+package.set('branch-rate', '1.0')
+package.set('complexity', '0')
+
+classes = ET.SubElement(package, 'classes')
+
+total_lines = 0
+total_covered = 0
+
+for filename, data in file_coverage.items():
+    class_elem = ET.SubElement(classes, 'class')
+    class_elem.set('name', filename.replace('/', '.').replace('.py', ''))
+    class_elem.set('filename', filename)
+    
+    lines_elem = ET.SubElement(class_elem, 'lines')
+    
+    file_lines = 0
+    file_covered = 0
+    
+    for line_num, hits in data['line_hits'].items():
+        line_elem = ET.SubElement(lines_elem, 'line')
+        line_elem.set('number', str(line_num))
+        line_elem.set('hits', str(hits))
+        file_lines += 1
+        if hits > 0:
+            file_covered += 1
+    
+    total_lines += file_lines
+    total_covered += file_covered
+    
+    line_rate = file_covered / file_lines if file_lines > 0 else 0
+    class_elem.set('line-rate', f'{line_rate:.4f}')
+    class_elem.set('branch-rate', '1.0')
+    class_elem.set('complexity', '0')
+
+overall_rate = total_covered / total_lines if total_lines > 0 else 0
+combined_root.set('line-rate', f'{overall_rate:.4f}')
+combined_root.set('branch-rate', '1.0')
+package.set('line-rate', f'{overall_rate:.4f}')
+
+print(f'Combined coverage: {total_covered}/{total_lines} = {overall_rate:.2%}')
+
+combined_tree = ET.ElementTree(combined_root)
+ET.indent(combined_tree, space='  ')
+combined_tree.write('../combined-coverage.xml', encoding='utf-8', xml_declaration=True)
+print('Saved combined coverage to combined-coverage.xml')
+"
+          
+      - name: Verify combined coverage
+        run: |
+          echo "Combined coverage file:"
+          ls -la combined-coverage.xml
+          echo "Coverage content preview:"
+          head -20 combined-coverage.xml
+          
+      - name: Upload combined coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
-          files: ./coverage.xml
-          flags: py${{ matrix.python-version }}-${{ matrix.optional-deps }}
+          files: ./combined-coverage.xml
+          flags: combined-coverage
+          name: combined-coverage-report
+          fail_ci_if_error: false
+          verbose: true
         env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }} 
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
 
   # --- LINTING TASK ---
