--- a/codecov.yml
+++ b/codecov.yml
@@ -1,22 +1,38 @@
 codecov:
-  # Max age for uploaded reports (e.g., '12h' for 12 hours, '1d' for 1 day)
-  # Reports older than this will be rejected. Set to 'off' to disable.
   max_report_age: 12h
+  require_ci_to_pass: true
 
 coverage:
   precision: 2
+  round: down
+  range: "70...100"
+  
   status:
     project:
       default:
         target: auto
-        # Threshold for coverage decrease before a status check fails
         threshold: 1%
-
-  parsers:
-    gcov:
-      branch_detection:
-        conditional: yes
-        loop: yes
-        method: yes
-        macro: yes
+        base: auto
+    patch:
+      default:
+        target: auto
+        threshold: 1%
+        
+  flags:
+    combined-coverage:
+      paths:
+        - src/
+      carryforward: false
+      
+ignore:
+  - "tests/**/*"
+  - "setup.py"
+  - "**/__pycache__/**"
+  - "*.egg-info/**/*"
+  - "build/**/*"
+  - "dist/**/*"
   
+comment:
+  layout: "reach,diff,flags,files,footer"
+  behavior: default
+  require_changes: false
