--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -107,11 +107,9 @@ jobs:
       - name: Upload combined coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
-          files: ./combined-coverage.xml
-          flags: combined-coverage
-          name: combined-coverage-report
-          fail_ci_if_error: false
-          verbose: true
+          file: ./combined-coverage.xml
+          flags: unittests
+          name: "Combined Report"
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
