--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -14,6 +14,13 @@ on:
     branches: [ main ] # Run tests and linting on every push to main
   release:
     types: [published] # Publish only when a release is created
+  workflow_dispatch:
+    inputs:
+      publish_to_pypi:
+        description: 'Publish to PyPI?'
+        required: false
+        default: 'false'
+        type: boolean
 
 jobs:
   # --- TESTING TASK ---
@@ -143,7 +150,12 @@ jobs:
     runs-on: ubuntu-latest
     # The publication will be triggered ONLY when the release is created
     # AND if the tests and linting are successful
-    if: github.event_name == 'release' && github.event.action == 'published'
+    # if: github.event_name == 'release' && github.event.action == 'published' # old
+    
+    # Run if it is a Release OR (if it is a Manual Run AND the checkbox is checked)
+    if: >-
+      (github.event_name == 'release' && github.event.action == 'published') || 
+      (github.event_name == 'workflow_dispatch' && inputs.publish_to_pypi == true)    
     needs: [test, lint]
     permissions:
       id-token: write
